# pico-logger-firmware

./: CMakeLists.txt
src/: main.c  msc_disk.c
